<resources>
    <string name="app_name">Smiley</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding_title1">더욱 정확하게, 더욱 간단하게</string>
    <string name="onboarding_content1">착용 시간 관리부터, 목표 달성까지. 더욱 똑똑해진 교정기로 차별화된 교정을 경험해 보세요.</string>

    <string name="onboarding_title2">하루하루 기록되는 나의 노력</string>
    <string name="onboarding_content2">노력이 배신하지 못하도록 저희가 꽉 잡아둘게요:)\n교정에 대한 나의 노력 매일매일 기록됩니다 !</string>
    <string name="onboarding_title3">무엇이든 물어보세요</string>
    <string name="onboarding_content3">전문가와 교정 선배들의 꿀팁,\n똑똑한 챗봇까지 모두 다 준비되어 있어요 !</string>
    <string name="google_login_text">구글 계정으로 시작</string>
    <string name="kakao_login_text">카카오 계정으로 시작</string>
    <string name="permission_explain_text">앱 이용을 위해 아래의 권한들이 필요합니다. 접근 권한은 휴대폰 설정에서 언제든지 바꿀 수 있습니다.</string>
    <string name="medical_question_1">1. 치과진료 외에 수술이나 입원 경력이 있나요?</string>
    <string name="medical_question_2">2. 알러지나 부작용을 유발하는 의약품이 있나요?</string>
    <string name="medical_sub_question_2">*의약품명을 입력해주세요</string>
    <string name="medical_question_3">3. 만성(또는 전신) 질환이 있나요?</string>
    <string name="answer_yes">네</string>
    <string name="answer_no">아니오</string>
    <string name="medical_sub_question_3">*질환명을 입력해주세요</string>
    <string name="medical_question_4">4. 치과 치료 중 마취나 지혈이 잘 안되어 고생한 경험이 있나요?</string>
    <string name="calibration_question_1">1. 현재 교정 중이신가요?</string>
    <string name="calibration_question_2">2. 어느 병원에서 교정을 받고 있나요?</string>
    <string name="calibration_sub_question_2">*병원명을 입력해주세요</string>
    <string name="calibration_question_3">3. 교정 시작일은 언제인가요?</string>
    <string name="hint_email">예시) 000000@naver.com</string>
    <string name="hint_phone_number">01012345678</string>
    <string name="meidcine_search_hint">의약품 명을 입력해주세요 ex) 타이레놀</string>
    <string name="hospital_search_hint">병원 명을 입력해주세요</string>
    <string name="hospital_info_provide_notice">스마일리에서 제공하는 병원 정보는 건강보험심사평가원의 의료 빅데이터를 기반으로 제공됩니다.</string>
    <string name="hospital_data_edit_request_message">잘못된 정보가 있다면\nSMILEY 팀에게 알려주세요.</string>
    <string name="app_provider_Information">Smi)ey\n\n사업자 등록번호: 000-00-00000\n동의대학교 컴퓨터소프트웨어공학과\n부산광역시 부산진구 엄광로 176(가야동) 정보공학관 915호\n대표전화 : 051-890-0000</string>
    <string name="no_reserv_data_msg">스마일리에서 접수한 이력이 없거나,\n진료자 정보가 정확하지 않을 수 있어요</string>
    <string name="on_boarding_start">시작하기</string>

    <!-- AI 자가진단 -->
    <string name="assessment_facial_type">안면 비대칭 검사</string>
    <string name="assessment_jaw_type">돌출입 &amp; 주걱턱 검사</string>
    <string name="assessment_tooth_brush_type">칫솔 교체 주기 검사</string>

    <string name="assessment_facial_tile_title">난 웃을 때 어떨까?\n안면 비대칭 진단하기</string>
    <string name="assessment_jaw_tile_title">예쁜 옆모습을 원한다면?\n돌출입 &amp; 주걱턱 진단하기</string>
    <string name="assessment_tooth_brush_tile_title">칫솔은 언제 바꿔야하지?\n교체주기 알아보러가기</string>

    <string name="assessment_facial_title">인공지능 기술로\n내 상태를 알아보세요</string>
    <string name="assessment_facial_sub_title">변화하는 나의 모습을 확인할 수 있어요</string>

    <string name="assessment_guide_one_title">원하는 검사를 선택해주세요</string>
    <string name="assessment_guide_one_sub_explain">안면 비대칭, 돌출입, 칫솔모 교체 검사 등 다양한 검사를 해볼 수 있어요</string>
    <string name="assessment_guide_two_title">가이드에 맞게 얼굴을 촬영해주세요</string>
    <string name="assessment_guide_two_explain">해당 기능은 촬영 가이드를 제공합니다. 정확한 결과를 위해 가이드를 최대한 지켜주세요</string>

    <!-- 날짜 -->
    <string name="date_year_month_kor">%d년 %d월</string>

    <!-- 레이아웃 Title -->
    <string name="title_input_phone_number">전화번호\n입력해 주세요.</string>
    <string name="title_input_email">이메일을\n입력해 주세요.</string>
    <string name="title_input_brith_date">"생년월일을\n입력해 주세요."</string>
    <string name="title_stats_evaluation">교정 잘하고 있을까?</string>
    <string name="title_mission_complete_ratio">미션 달성도</string>

    <!-- 레이아웃 Content -->
    <string name="content_mission_tips">일일 미션은 교정에 도움이 되는 요소들로 구성했어요. 일일 미션을 잘 지킬 수 있도록 노력한다면 분명 좋은 결과가 있을 거예요😊</string>
    <string name="content_evaluation_tips">오래 착용하는 것만큼 일정하게 착용하는 것도 중요합니다. 매일 같은 시간대에 착용할 수 있도록 신경 써보세요\n\n교정은 무엇보다 본인의 노력이 가장 중요하다는 것을 잊지 마세요</string>
    <string name="content_stats_recommend_evaluation">하루 12시간 이상 착용이 권장됩니다</string>

    <!-- 버튼 텍스트 -->
    <string name="btn_ok">확인</string>
    <string name="btn_select_ok">선택 완료</string>
    <string name="btn_allow_permission">권한 허용하기</string>

    <!-- 다이얼로그 Title -->
    <string name="dialog_title_confirm_input">입력 확인</string>
    <string name="dialog_title_info_complete">정보 입력 완료</string>
    <string name="dialog_title_sign_up_complete">회원가입 완료!</string>
    <string name="dialog_title_system_notice">시스템 알림</string>

    <!-- 다이얼로그 Button -->
    <string name="dialog_button_resist">등록하기</string>
    <string name="dialog_button_later">나중에 하기</string>

    <!-- 다이얼로그 Message -->
    <string name="dialog_message_add_device">모든 정보 입력이 완료 되었습니다 !\n지금 바로 교정 장치를 등록해보세요!</string>
    <string name="dialog_message_add_hospital">교정 치료를 받고 계신가요?\n병원을 등록하면 앱에서 예약할 수 있어요!</string>
    <string name="dialog_message_setting_device">(교정 장치 등록은 추후 앱 설정에서도 가능합니다.)</string>

    <!-- 다이얼로그 Error Message -->
    <string name="dialog_error_no_empty_space">빈 칸 없이 입력해주세요.</string>
    <string name="dialog_error_check_calibration_start_date">교정 시작 일을 확인 해주세요.</string>
    <string name="dialog_error_login">사용자 검증에 실패 하였습니다. 로그인을 다시 진행해 주세요.</string>
    <string name="dialog_error_invalid_email">올바르지 않은 이메일 형식입니다.</string>
    <string name="dialog_error_email_format">이메일 형식을 확인해 주세요.</string>
    <string name="dialog_error_phone_number_format">전화번호를 확인해 주세요.</string>
    <string name="dialog_error_invalid_birth_date">생년월일을 확인해 주세요.</string>

    <!-- 레이아웃 Mock String -->
    <string name="mock_address">서울특별시 은평구 신사동 12</string>
    <string name="mock_phone_number">02-123-4567</string>
    <string name="mock_provide_hospital_info">병원 정보 제공</string>
    <string name="mock_request_info_edit">정보 수정 요청</string>
    <string name="mock_review_count">리뷰 0개</string>
    <string name="mock_review_no_exist">리뷰 내역이 없어요</string>
    <string name="mock_time_range_08_30_19_30">08:30 ~ 19:30</string>
    <string name="mock_time_range_13_30_14_30">13:30 ~ 14:30</string>
    <string name="mock_sub_info">(부가 정보)</string>
    <string name="mock_dialog_content">다이얼로그 내용</string>

    <!-- 공용 단어 -->
    <string name="common_location">위치</string>
    <string name="common_phone_number">전화번호</string>
    <string name="common_review">리뷰</string>
    <string name="common_break">휴진</string>
    <string name="common_lunch_time">점심 시간</string>
    <string name="common_today">오늘</string>
    <string name="common_monday">월요일</string>
    <string name="common_tuesday">화요일</string>
    <string name="common_wednesday">수요일</string>
    <string name="common_thursday">목요일</string>
    <string name="common_friday">금요일</string>
    <string name="common_saturday">토요일</string>
    <string name="common_sunday">일요일</string>
    <string name="common_holiday">공휴일</string>
    <string name="common_bluetooth">블루투스</string>
    <string name="common_camera">카메라</string>
    <string name="common_storage">저장 공간</string>
    <string name="common_see">보기</string>
    <string name="common_me">나</string>
    <string name="common_avg">평균</string>
    <string name="common_smiley">Smi)ey</string>

    <!-- 기타 -->
    <string name="slogan_part_1_right_now">바로 지금,</string>
    <string name="slogan_part_2_need_smile">미소가 필요한 순간</string>
    <string name="btn_cancle">취소</string>
</resources>