<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_round_rectangle_15dp"
        android:backgroundTint="@color/white"
        android:minWidth="300dp"
        android:minHeight="155dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_gravity="center"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/dialog_title_system_notice"
            android:textColor="@color/black1_20"
            android:textSize="@dimen/M500_16_h22" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:lineSpacingExtra="6sp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/mock_dialog_content"
            android:textColor="@color/gray1_42"
            android:textSize="@dimen/M500_14_h20" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            app:lottie_rawRes="@raw/complete"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            />

        <TextView
            android:id="@+id/dialog_sub_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:lineSpacingExtra="6sp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/mock_sub_info"
            android:textColor="@color/gray3_82"
            android:textSize="@dimen/B4_M500_13_h18" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/gray5_E6" />

        <TextView
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"

            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/primary_normal"
            android:textSize="@dimen/M500_14_h20"
            android:fontFamily="@font/pretendard_medium"
            tools:targetApi="s" />
    </LinearLayout>
</layout>